Replace old registration script

--- a/jobs/register_engine/templates/bin/job_properties.sh.erb
+++ b/jobs/register_engine/templates/bin/job_properties.sh.erb
@@ -21,6 +21,8 @@ export DOCKER_GROUP="<%= p('docker.group') %>"
 
 export DOCKER_PORT="<%= p('docker.tcp_port') %>"
 
+export SHIPYARD_SCHEMA="<%= p('shipyard.schema') %>"
+
 export SHIPYARD_PORT="<%= p('shipyard.port') %>"
 
 export SHIPYARD_HOST="<%= p('shipyard.host') %>"
