Scheme, not schema!

--- a/jobs/register_engine/templates/bin/job_properties.sh.erb
+++ b/jobs/register_engine/templates/bin/job_properties.sh.erb
@@ -21,7 +21,7 @@ export DOCKER_GROUP="<%= p('docker.group') %>"
 
 export DOCKER_PORT="<%= p('docker.tcp_port') %>"
 
-export SHIPYARD_SCHEMA="<%= p('shipyard.schema') %>"
+export SHIPYARD_SCHEME="<%= p('shipyard.scheme') %>"
 
 export SHIPYARD_PORT="<%= p('shipyard.port') %>"
 
